Organized lexer