@@ -1,23 +1,19 @@
 package org.example.lexer;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import java.util.Set;
 
 public class Lexer {
 
-    public void run(String input) {
-        List<LexerFunction> lexerFunctions = List.of(
-            Lexer.singleTokenFunction(TokenType.PLUS),
-            Lexer.singleTokenFunction(TokenType.MINUS),
-            Lexer.singleTokenFunction(TokenType.MULTIPLY),
-            Lexer::singleLineComment,
-            Lexer.singleTokenFunction(TokenType.DIVIDE),
-            Lexer::numberFunction,
-            Lexer::identifierFunction,
-            Lexer::stringFunction
-        );
+    private final List<LexerFunction> lexerFunctions;
+
+    public Lexer(List<LexerFunction> lexerFunctions) {
+        this.lexerFunctions = Collections.unmodifiableList(lexerFunctions);
+    }
+
+    public List<Token> run(String input) {
         HistoryCharacterStream stream = new CharacterStreamImpl(input);
         List<Token> tokens = new ArrayList<>();
         outer: while (!stream.isEnd()) {
@@ -36,131 +32,8 @@ public class Lexer {
                 throw new LexerUnrecognizedCharacter(stream);
             }
         }
-        System.out.println(tokens);
+        return List.copyOf(tokens);
     }
 
-    private static Optional<Token> singleLineComment(CharacterStream stream) {
-        var line = stream.line();
-        var position = stream.position();
-        var column = stream.column();
-        if(stream.get() != '/') {
-            return Optional.empty();
-        }
-        stream.advance();
-        if(stream.get() != '/') {
-            return Optional.empty();
-        }
-        stream.advance();
-        StringBuilder sb = new StringBuilder();
-        while (!stream.isEnd() && stream.get() != '\n') {
-            sb.append(stream.get());
-            stream.advance();
-        }
-        var result = new Token(TokenType.SINGLE_LINE_COMMENT, sb.toString(), position, line, column);
-        stream.advance();
-        return Optional.of(result);
-    }
 
-    private static LexerFunction singleTokenFunction(TokenType tokenType) {
-        return stream -> {
-            if(stream.get() != tokenType.getCode().charAt(0)) {
-                return Optional.empty();
-            }
-            var result = new Token(tokenType, tokenType.getCode(), stream.position(), stream.line(), stream.column());
-            stream.advance();
-            return Optional.of(result);
-        };
-    }
-
-    private static Optional<Token> numberFunction(CharacterStream stream) {
-        var line = stream.line();
-        var position = stream.position();
-        var column = stream.column();
-        if(!Character.isDigit(stream.get())) {
-            return Optional.empty();
-        }
-        StringBuilder sb = new StringBuilder();
-        boolean expectDot = true;
-        while (!stream.isEnd() && (Character.isDigit(stream.get()) || (stream.get() == '.' && expectDot))) {
-            sb.append(stream.get());
-            if(stream.get() == '.') {
-                expectDot = false;
-            }
-            stream.advance();
-        }
-        return Optional.of(new Token(TokenType.NUMBER, sb.toString(), position, line, column));
-    }
-
-    private static Optional<Token> identifierFunction(CharacterStream stream) {
-        var line = stream.line();
-        var position = stream.position();
-        var column = stream.column();
-        if(!Character.isAlphabetic(stream.get()) && stream.get() != '_') {
-            return Optional.empty();
-        }
-        StringBuilder sb = new StringBuilder();
-        while (!stream.isEnd() && (
-            Character.isAlphabetic(stream.get()) ||
-                Character.isDigit(stream.get()) ||
-                stream.get() == '_')) {
-            sb.append(stream.get());
-            stream.advance();
-        }
-        return Optional.of(new Token(TokenType.IDENTIFIER, sb.toString(), position, line, column));
-    }
-
-    private static Optional<Token> stringFunction(CharacterStream stream) {
-        var line = stream.line();
-        var position = stream.position();
-        var column = stream.column();
-        if(stream.get() != '"') {
-            return Optional.empty();
-        }
-        StringBuilder sb = new StringBuilder();
-        stream.advance();
-        boolean ignoreNext = false;
-        while (true) {
-            if(stream.isEnd() || stream.get() == '\n' || stream.get() == '\r') {
-                throw new LexerInvalidStringEndingException(stream); // Invalid string ending
-            }
-
-            if(stream.get() == '\\') {
-                ignoreNext = true;
-                stream.advance();
-                continue;
-            }
-
-            if(ignoreNext) {
-                ignoreNext = false;
-                if(stream.get() == '"') {
-                    sb.append(stream.get());
-                }
-                if(stream.get() == 'n') {
-                    sb.append('\n');
-                }
-                if(stream.get() == 't') {
-                    sb.append('\t');
-                }
-                if(stream.get() == 'r') {
-                    sb.append('\r');
-                }
-                if(stream.get() == '\\') {
-                    sb.append('\\');
-                }
-                stream.advance();
-            } else {
-                if(stream.get() == '"') {
-                    stream.advance();
-                    break;
-                }
-                sb.append(stream.get());
-                stream.advance();
-            }
-
-
-
-
-        }
-        return Optional.of(new Token(TokenType.STRING, sb.toString(), position, line, column));
-    }
 }
